# thesis-data

analyzeData/: CMakeLists.txt  analyzeData.cpp
tracker_data/august_experiments/: CMakeLists.txt  CMakeLists.txt~  README.md  plot_gnu.txt  plot_gnu.txt~  rotation_difference_liberty.cpp  rotation_difference_liberty.cpp~
tracker_data/august_experiments/pick_up_2/: liberty_1.txt  liberty_11.txt  liberty_3.txt  liberty_5.txt  liberty_7.txt  liberty_Wednesday_04_24_04.txt  liberty_Wednesday_04_24_58.txt  liberty_Wednesday_04_25_23.txt  liberty_Wednesday_04_26_54.txt  liberty_Wednesday_04_27_16.txt  liberty_Wednesday_04_27_43.txt  liberty_Wednesday_04_28_27.txt  liberty_Wednesday_04_28_48.txt  rotation_difference.cpp~  rotation_difference_liberty.cpp~
tracker_data/august_experiments/pickup_simple/: liberty_Wednesday_03_49_49.txt  liberty_Wednesday_03_51_27.txt  liberty_Wednesday_03_51_58.txt  liberty_Wednesday_03_52_33.txt  liberty_Wednesday_03_53_48.txt  liberty_Wednesday_03_54_18.txt  liberty_Wednesday_03_55_34.txt  liberty_Wednesday_03_56_06.txt  liberty_Wednesday_03_57_19.txt  liberty_Wednesday_03_58_49.txt  liberty_Wednesday_03_59_32.txt  liberty_Wednesday_04_00_04.txt  liberty_Wednesday_04_00_52.txt
tracker_data/august_experiments/serve_2/: liberty_3.txt  liberty_5.txt  liberty_6.txt  liberty_9.txt  liberty_Wednesday_04_49_11.txt  liberty_Wednesday_04_49_37.txt  liberty_Wednesday_04_50_21.txt  liberty_Wednesday_04_51_26.txt  liberty_Wednesday_04_51_46.txt  (+3 more)
tracker_data/january_experiments/: CMakeLists.txt  README.md  commands_gnuplot.txt  rotation_difference.cpp
(+1284 files in other folders)
